css/services.css
/*#services{
  background: url("../img/services-bg.jpg");
  background-size:100%; 
} */

div.services-container{
    display:inline-flex;
    margin:55px;
    margin-top: 80px;

}
.card-container {
  position: relative;
  width: 350px;
  height: 350px;
  margin:55px; 
  background-color: blue;
  text-align: center;
  border-radius: 25px;
}
.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #FFFFFF;
  overflow: hidden;
  width: 100%;
  height: 0;
  transition: .8s ease;
  border-radius: 25px;
}

.card-container:hover .overlay {
  height: 100%;
}

.text {
  color: black;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

/*
.btn-container{
  text-align: center;
  margin-left: -100px;
}

.booknow{
  position: absolute;
  background-color: white;
  font-size: 20;
  color: black;
  border-radius: 25px;
  border-width: 2px;
  border-color: #2980b9;
  bottom: 20px; 
}*/

.image-container{
  margin-top: 25px;
  text-align: center;
}
img.services-imgs{
    border-radius: 50%; 
    width:150px; height:150px;
}

